--- a/index.html
+++ b/index.html
@@ -28,7 +28,34 @@
 </head>
 <body>
     <!-- Navegador / SmoothScrol -->
-    <nav></nav>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark text-white text-center m-auto w-100">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img
+                <h3 class="ricomida-style hover">Viajes Chile</h3>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end" id="navbarsExample10">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#recetas">Recetas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contacto" tabindex="-1" aria-disabled="true">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!-- Encabezado / Carousel -->
     <header>
         <div class="carousel"></div>
