Adición de contenido: Se añade seccion de Quienes Somos

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
     </nav>
     <!-- Encabezado / Carousel -->
-    <header>
+    <header id="header" class="pb-5">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -81,43 +81,28 @@
         </div>
     </header>
     <!-- Quienes Somos / Grid / Desaparece en tamaños pequeños-->
-    <section id="quienes_somos" style="display: none">
-        <h1></h1>
-        <div class="row">
-            <div class="col-3">
-                <div class="card">
-                    <div class="card-body">
-                        <p>
-
-                        </p>
+    <section id="quienes_somos" class="py-3 px-5">
+        <h1 class="fw-bold text-center">¿Quiénes Somos?</h1>
+        <hr class="text-info pt-1">
+        <div class="container-fluid">
+            <div class="row text-white">
+                <div class="p-4 col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 h-150">
+                    <div class="bg-info text-center fs-3 my-2">
+                        <i class="fas fa-plane"></i>
+                    </div>
+                    <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.</p>
+                </div>
+                <div class="p-4 col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 h-150">
+                    <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.</p>
+                    <div class="bg-info text-center fs-3 my-2">
+                        <i class="fas fa-mountain"></i>
                     </div>
                 </div>
-            </div>
-            <div class="col-3">
-                <div class="card">
-                    <div class="card-body">
-                        <p>
-
-                        </p>
+                <div class="p-4 col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 h-150">
+                    <div class="bg-info text-center fs-3 my-2">
+                        <i class="fas fa-route"></i>
                     </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="card">
-                    <div class="card-body">
-                        <p>
-
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="card">
-                    <div class="card-body">
-                        <p>
-
-                        </p>
-                    </div>
+                    <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.</p>
                 </div>
             </div>
         </div>
