--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     <!-- Bootstrap CSS 5.0.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <!-- JQuery 3.6.0 -->
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-
     <!-- Personalizaciones CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
     <style>
@@ -171,18 +168,22 @@
     <footer class="bg-success text-white m-auto w-100 fs-3">
         <div class="container">
             <div class="row">
-                <div class="col-6">
-                    Viajes Chile
+                <div id="footer_bar" class="col-6">
+                    <div id="footer_text">Viajes Chile<i id="footer_icon" class="fas fa-plane d-inline-block" style="display: none !important;"></i></div>
+
                 </div>
                 <div class="col-6 text-center">
-                    <i class="fab fa-github-square"></i>
-                    <i class="fab fa-linkedin"></i>
-                    <i class="fab fa-twitter-square"></i>
-                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-github-square rrss-icons " title="https://github.com/ecamp" data-bs-toggle="tooltip" data-bs-placement="top" ></i>
+                    <i class="fab fa-linkedin rrss-icons"></i>
+                    <i class="fab fa-twitter-square rrss-icons"></i>
+                    <i class="fab fa-facebook-square rrss-icons"></i>
                 </div>
             </div>
         </div>
     </footer>
+
+    <!-- JQuery 3.6.0 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <!--Popper-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
@@ -194,21 +195,28 @@
     <script src="./assets/js/script.js"></script>
 
     <script type="application/javascript">
-        (function() {
-            let qs, js, q, s, d = document,
-                gi = d.getElementById,
-                ce = d.createElement,
-                gt = d.getElementsByTagName,
-                id = "typef_orm",
-                b = "https://embed.typeform.com/";
-            if(!gi.call(d,id)) {
-                js=ce.call(d,"script");
-                js.id=id;
-                js.src=b+"embed.js";
-                q=gt.call(d,"script")[0];
-                q.parentNode.insertBefore(js,q)
-            }
-        })()
+        $("#footer_text").mouseover(function () {
+            $("#footer_icon").removeAttr("style")
+            $("#footer_icon").animate({"padding-left": "+=" + $("#footer_icon").parent().width() + "px"}, 2000);
+
+            $("#footer_icon").removeAttr("style")
+            $("#footer_icon").attr("display","none")
+
+        })
+        //Typeform - Formulario
+        let qs, js, q, s, d = document,
+            gi = d.getElementById,
+            ce = d.createElement,
+            gt = d.getElementsByTagName,
+            id = "typef_orm",
+            b = "https://embed.typeform.com/";
+        if (!gi.call(d, id)) {
+            js = ce.call(d, "script");
+            js.id = id;
+            js.src = b + "embed.js";
+            q = gt.call(d, "script")[0];
+            q.parentNode.insertBefore(js, q)
+        }
     </script>
 </body>
 </html>
