Comentario sobre script Javascript

--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
     <!-- Personalizaciones JS -->
     <script src="./assets/js/script.js"></script>
 
+/* Script Javascript */
+
     <script type="application/javascript">
         (function() {
             let qs, js, q, s, d = document,
