--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarsExample10">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active scroll-hash" aria-current="page" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#quienes_somos">Quienes Somos</a>
+                        <a class="nav-link scroll-hash" href="#quienes_somos">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#destacados">Destacados</a>
+                        <a class="nav-link scroll-hash" href="#destacados">Destacados</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link scroll-hash" href="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -164,13 +164,12 @@
             <div class="row">
                 <div id="footer_bar" class="col-6">
                     <div id="footer_text">Viajes Chile<i id="footer_icon" class="fas fa-plane d-inline-block" style="display: none !important;"></i></div>
-
                 </div>
                 <div class="col-6 text-center">
-                    <i class="fab fa-github-square rrss-icons " title="https://github.com/ecamp" data-bs-toggle="tooltip" data-bs-placement="top" ></i>
-                    <i class="fab fa-linkedin rrss-icons"></i>
-                    <i class="fab fa-twitter-square rrss-icons"></i>
-                    <i class="fab fa-facebook-square rrss-icons"></i>
+                    <a href="https://github.com/ecamp"><i class="fab fa-github-square rrss-icons text-white" title="https://github.com/ecamp" data-bs-toggle="tooltip" data-bs-placement="top"></i></a>
+                    <a href="https://www.linkedin.com/company/e-camp-chile/"><i class="fab fa-linkedin rrss-icons text-white" title="https://www.linkedin.com/company/e-camp-chile/" data-bs-toggle="tooltip" data-bs-placement="top"></i></a>
+                    <a href="https://twitter.com/ecamptalent"><i class="fab fa-twitter-square rrss-icons text-white" title="https://twitter.com/ecamptalent" data-bs-toggle="tooltip" data-bs-placement="top"></i></a>
+                    <a href="https://www.facebook.com/ecamp/"><i class="fab fa-facebook-square rrss-icons text-white" title="https://www.facebook.com/ecamp/" data-bs-toggle="tooltip" data-bs-placement="top"></i></a>
                 </div>
             </div>
         </div>
